Bug 141946 - EDITING Inserting column before autofiltered column empties autofilter
Summary: EDITING Inserting column before autofiltered column empties autofilter
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Tünde Tóth
URL:
Whiteboard: target:7.2.0
Keywords:
Depends on:
Blocks: AutoFilter
  Show dependency treegraph
 
Reported: 2021-04-28 10:01 UTC by NISZ LibreOffice Team
Modified: 2021-05-06 08:47 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of the original document in Calc after filtering column B (83.02 KB, image/png)
2021-04-28 10:01 UTC, NISZ LibreOffice Team
Details
Screenshot of the problem in Calc after inserting a new column before B (82.72 KB, image/png)
2021-04-28 10:02 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2021-04-28 10:01:44 UTC
Created attachment 171473 [details]
Screenshot of the original document in Calc after filtering column B

This is similar to bug #48025
When inserting a new column before an autofiltered one the new one gets marked as being filtered and all autofilter dropdown becomes empty.

Steps to reproduce:
    1. Open attachment #70414 [details]
    2. In the autofilter of Column B filter out the value 1
    3. Select a cell in column B such as B10
    4. Sheet – Insert Colums - Insert Before 
(interestingly Insert After does not cause a similar error)

Actual results:
Column B is now an empty column with autofilter. The blue marking in cell B1 indicates column B is filtered. The autofilter dropdowns are empty.

Expected results:
Cell C1 should be marked as filtered, autofilter dropdowns should not be empty.

LibreOffice details:
Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: eeb2854e085fdd9f7a38d6e952a8aedf43e90323
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL
Comment 1 NISZ LibreOffice Team 2021-04-28 10:02:04 UTC
Created attachment 171474 [details]
Screenshot of the problem in Calc after inserting a new column before B
Comment 2 Commit Notification 2021-04-30 13:09:42 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4b8459e86c7a411d8f02fc5480033cb031a941f2

tdf#141946 sc: fix broken filter criteria when inserting column

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 NISZ LibreOffice Team 2021-05-06 08:47:48 UTC
Verified in: 

Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: ef78c7d93e4f170ac7a7f0307a8305052524eb53
CPU threads: 4; OS: Windows 10.0 Build 17134; UI render: default; VCL: win
Locale: ug-CN (hu_HU); UI: hu-HU
Calc: threaded