tdf#141946 sc: fix broken filter criteria when inserting column

The autofilter criteria weren't remain with the filtered column
when we inserted a column left of the filtered column.

Change-Id: If366d9de9518da3d13ec2ba6b1b36e4f98c76019
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/114881
Tested-by: Jenkins
Reviewed-by: Balazs Varga <varga.balazs3@nisz.hu>